# nohupx

./: .gitattributes  Cargo.toml  README.md  README.zh-CN.md  agent.md
.github/workflows/: release.yml
scripts/: install.sh
src/: cli.rs  config.rs  detach.rs  log.rs  main.rs  runner.rs  secret.rs
src/notify/: dingtalk.rs  discord.rs  email.rs  feishu.rs  mod.rs  ntfy.rs  slack.rs  telegram.rs  webhook.rs  wecom.rs
